Attempt at making filter
Not functional yet

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <h1 class="text-center">Insult Generator</h1>
     <div class="jumbotron">
-      <h2 class="text-center">{{ctrl.insult}}</h2>
+      <h2 class="text-center">{{ctrl.insult | capitalize}}</h2>
     </div>
     <div class="text-center">
       <button class="btn btn-primary btn-lg" ng-click="ctrl.replaceInsult()">Sayith</button>
