--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="app.js"></script>
   <script src="insultCtrl.js"></script>
   <script src="titleCase.js"></script>
+  <script src="caplitalizeFilter.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
